doc/scheduler/XSCHED/phase4_log/fix_v2_20260128_234534.log
========================================================================
XSched 修复 v2：使用 RTLD_NEXT
========================================================================

[1/5] 恢复原始文件并创建新修改...
  ✅ 恢复原始文件

[2/5] 在 shim.cpp 中添加 RTLD_NEXT fallback...
  ✅ 已添加 RTLD_NEXT fallback

[3/5] 清理并重新编译...
[ 79%] Building CXX object preempt/CMakeFiles/preempt.dir/src/sched/executor.cpp.o
[ 80%] Building CXX object preempt/CMakeFiles/preempt.dir/src/sched/hint.cpp.o
[ 80%] Building CXX object preempt/CMakeFiles/preempt.dir/src/xqueue/async_xqueue.cpp.o
[ 81%] Building CXX object preempt/CMakeFiles/preempt.dir/src/xqueue/command_buffer.cpp.o
[ 82%] Building CXX object preempt/CMakeFiles/preempt.dir/src/xqueue/launch_worker.cpp.o
[ 82%] Building CXX object preempt/CMakeFiles/preempt.dir/src/xqueue/xcommand.cpp.o
[ 83%] Building CXX object preempt/CMakeFiles/preempt.dir/src/xqueue/xqueue.cpp.o
[ 84%] Linking CXX static library libftxui-component.a
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
[ 84%] Built target component
[ 85%] Linking CXX shared library libpreempt.so
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
[ 85%] Built target preempt
gmake[4]: Entering directory '/data/dockercode/xsched-official/build'
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
gmake[4]: Entering directory '/data/dockercode/xsched-official/build'
[ 86%] Building CXX object platforms/hip/CMakeFiles/halhip.dir/hal/src/hip_command.cpp.o
[ 86%] Building CXX object platforms/hip/CMakeFiles/halhip.dir/hal/src/hip_queue.cpp.o
[ 87%] Building CXX object platforms/hip/CMakeFiles/halhip.dir/hal/src/kernel_param.cpp.o
[ 88%] Building CXX object platforms/hip/CMakeFiles/halhip.dir/hal/src/kernel_param_v2_8.cpp.o
[ 88%] Building CXX object platforms/hip/CMakeFiles/halhip.dir/hal/src/kernel_param_v3.0.cpp.o
[ 89%] Linking CXX shared library libhalhip.so
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
[ 89%] Built target halhip
gmake[4]: Entering directory '/data/dockercode/xsched-official/build'
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
gmake[4]: Entering directory '/data/dockercode/xsched-official/build'
[ 89%] Building CXX object platforms/hip/CMakeFiles/shimhip.dir/shim/src/intercept.cpp.o
[ 90%] Building CXX object platforms/hip/CMakeFiles/shimhip.dir/shim/src/shim.cpp.o
/data/dockercode/xsched-official/platforms/hip/shim/src/shim.cpp: In function ‘hipError_t xsched::hip::XLaunchKernel(const void*, dim3, dim3, void**, size_t, hipStream_t)’:
/data/dockercode/xsched-official/platforms/hip/shim/src/shim.cpp:40:16: error: ‘ORIGINAL_hipLaunchKernel’ was not declared in this scope
   40 |         return ORIGINAL_hipLaunchKernel(f, numBlocks, dimBlocks, args, sharedMemBytes, stream);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
/data/dockercode/xsched-official/platforms/hip/shim/src/shim.cpp:45:16: error: ‘ORIGINAL_hipLaunchKernel’ was not declared in this scope
   45 |         return ORIGINAL_hipLaunchKernel(f, numBlocks, dimBlocks, args, sharedMemBytes, stream);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
gmake[4]: *** [platforms/hip/CMakeFiles/shimhip.dir/build.make:93: platforms/hip/CMakeFiles/shimhip.dir/shim/src/shim.cpp.o] Error 1
gmake[4]: *** Waiting for unfinished jobs....
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
gmake[3]: *** [CMakeFiles/Makefile2:1446: platforms/hip/CMakeFiles/shimhip.dir/all] Error 2
gmake[3]: *** Waiting for unfinished jobs....
[ 91%] Linking CXX static library libservice_common.a
gmake[4]: Leaving directory '/data/dockercode/xsched-official/build'
[ 91%] Built target service_common
gmake[3]: Leaving directory '/data/dockercode/xsched-official/build'
gmake[2]: *** [Makefile:156: all] Error 2
gmake[2]: Leaving directory '/data/dockercode/xsched-official/build'
make[1]: *** [Makefile:38: build] Error 2
make[1]: Leaving directory '/data/dockercode/xsched-official'
make: *** [Makefile:77: hip] Error 2

[4/5] 重新链接库文件...
  ✅ 库文件已复制

[5/5] 测试修复...
[INFO @ T69392 @ 15:45:51.840440] using app-managed scheduler
python3: symbol lookup error: /data/dockercode/xsched-build/output/lib/libshimhip.so: undefined symbol: _ZN6xsched3hip7XMallocEPPvm

========================================================================
修复脚本执行完毕
========================================================================
